Add documentation register
